# HotelReservation

./: README.md
Docs/: API.md  HotelManager.md  Logs.md  UserManager.md
codes/: CMakeLists.txt  Makefile  main.cpp
codes/client/: main.cpp
codes/config/: Errors.json  RoomsInfo.json  UsersInfo.json
codes/front/: cli.cpp  cli.h
codes/infra/: client.cpp  client.h  dateManager.cpp  dateManager.h  decoder.cpp  decoder.h  encoder.h  filehandler.cpp  filehandler.h  hotel.cpp  hotel.h  saveLog.cpp  saveLog.h  server.cpp  server.h  socketUtils.cpp  socketUtils.h  user.cpp  user.h
codes/server/: main.cpp
